--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "employee-directory",
   "version": "0.1.0",
   "private": true,
-  "homepage": "git@github.com:BraenaanV/Employee-Directory.git",
+  "homepage": "https://BraenaanV.github.io/Employee-Directory",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
